# cpp-course-template

./: .gitignore  CMakeLists.txt  index.html
.github/workflows/: ci-docs.yml
course/docs/Lessons/: Lessons.md
course/docs/Lessons/Example/: 00_ExampleLesson.md  01_RepositoryPurpose.md  02_RepositoryStructure.md  03_FileExtensions.md  04_PublicVsPrivateAPI.md  05_ExampleTargetsVsUnitTests.md  06_CMakeIntegration.md  07_DocumentationPhilosophy.md  08_WhuUseThisTemplate.md  09_BoilerplateWalkthrough.md  10_Summary.md
course/src/: LectureExample_privateAPI.cpp  LectureExample_privateAPI.hpp
course/tests/: LectureExample_unitTests.cc
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/course/src/: LectureExample_privateAPI.cpp.func-c.html  LectureExample_privateAPI.cpp.func.html  LectureExample_privateAPI.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/student/src/: StudentExample_privateAPI.cpp.func-c.html  StudentExample_privateAPI.cpp.func.html  StudentExample_privateAPI.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/: Doxyfile  mainpage.md
docs/CourseGuide/: 00_CourseGuide.md  01_RepositorySetup.md  02_DirectoryStructure.md  04_GitHubWorkflow.md
docs/CourseGuide/03_LocalWorkflow/: 01_Building.md  02_RunningExecutables.md  03_UnitTesting.md  04_CoverageTesting.md  05_Doxygen.md
docs/html/: LectureExample__privateAPI_8hpp_source.html  LectureExample__publicAPI_8hpp_source.html  StudentExample__privateAPI_8hpp_source.html  StudentExample__publicAPI_8h_source.html  dir_13f6e9cb9c75a4a6a328a1cb3e7e5899.html  dir_13f6e9cb9c75a4a6a328a1cb3e7e5899_dep.map  dir_13f6e9cb9c75a4a6a328a1cb3e7e5899_dep.md5  dir_415cc8a953839678da969afd3943c155.html  dir_415cc8a953839678da969afd3943c155_dep.map  dir_415cc8a953839678da969afd3943c155_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_50592e5dba99dc975e4ce280b055020f.html  dir_50592e5dba99dc975e4ce280b055020f_dep.map  dir_50592e5dba99dc975e4ce280b055020f_dep.md5  dir_5121a184563ff5e3a18d2ebf7760c7b4.html  dir_6e9571b184ea86d920035b2ad55fe94f.html  dir_6e9571b184ea86d920035b2ad55fe94f_dep.map  dir_6e9571b184ea86d920035b2ad55fe94f_dep.md5  dir_9ece3eaba545d8620afbd90a709bbfec.html  dir_ccd21cbd88a0e925086ba0fc7edf666b.html  dir_ccd21cbd88a0e925086ba0fc7edf666b_dep.map  dir_ccd21cbd88a0e925086ba0fc7edf666b_dep.md5  dir_df997ef5cbe81af8266600b381d65502.html  dir_ee845acce81e8833e2159081f90be922.html  dir_ee845acce81e8833e2159081f90be922_dep.map  dir_ee845acce81e8833e2159081f90be922_dep.md5  dir_ef47b8abfd86d8371e53926230f8acb9.html  dir_ef47b8abfd86d8371e53926230f8acb9_dep.map  dir_ef47b8abfd86d8371e53926230f8acb9_dep.md5  dir_f5eb1f5273f1373b3d1ea2588a4e4c6d.html  dir_f5eb1f5273f1373b3d1ea2588a4e4c6d_dep.map  dir_f5eb1f5273f1373b3d1ea2588a4e4c6d_dep.md5  dir_fb072123b3d8ffc3894e6905bee39215.html  dir_fb072123b3d8ffc3894e6905bee39215_dep.map  dir_fb072123b3d8ffc3894e6905bee39215_dep.md5  graph_legend.html  group__CG__01__RepositorySetup.html  group__CG__01__RepositorySetup.map  group__CG__01__RepositorySetup.md5  group__CG__02__DirectoryStructure.html  (+101 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  (+22 more)
doxygen/: index.html
scripts/: code_coverage.ps1  code_coverage.sh  create_site.ps1  create_site.sh  disable_scripts.ps1  disable_scripts.sh  enable_scripts.ps1  enable_scripts.sh  run_tests.ps1  run_tests.sh  setup.ps1  setup.sh  update_docs.ps1  update_docs.sh
scripts/private/: render_ctest_report.py
student/src/: StudentExample_privateAPI.cpp  StudentExample_privateAPI.hpp
student/tests/: StudentExample_unitTests.cc
